# ITRI

./: README.md  featureMatch.launch  initial.cpp  test_traingulate.m
Optitrack/: itri_node.cpp
Optitrack/configuration/: rviz.rviz
Optitrack/launch/: run.launch
itri/: CMakeLists.txt
itri/config/: initial.yaml
itri/include/itri/: parameter.h  parameter.h.autosave  process.h
itri/launch/: featureMatch.launch
itri/src/: initial.cpp  parameter.cpp  process.cpp  try.cpp
optitrack/: itri_correct.cpp
optitrack/apriltag/fiducials/aruco_detect/launch/: Untitled Document.html  aruco_detect.launch
optitrack/apriltag/usb_cam/camera_info/: normal.yaml  poor.yaml
optitrack/apriltag/usb_cam/launch/: usb_cam-test.launch
robot_vision/: CMakeLists.txt
robot_vision/config/: initial.yaml
robot_vision/include/robot_vision/: process.h
robot_vision/launch/: featureMatch.launch  robot_vision.launch
robot_vision/src/: grayImage.cpp  initial.cpp  location.cpp  parameter.cpp  process.cpp
